--- a/css/buscar_invocador_tft.css
+++ b/css/buscar_invocador_tft.css
@@ -58,6 +58,16 @@ button:hover {
 
   /* Header */
 
+  .logo {
+    display: flex;
+    font-weight: bold;
+    letter-spacing: 1px;
+    color: #f93f55;
+    text-decoration: none;
+    font-size: 1.5em;
+    margin-top: 1em;
+  }
+
   header {
     background-color: #eee;
     padding: 10px;
@@ -68,6 +78,8 @@ button:hover {
     cursor: pointer;
     margin-bottom: 10px;
     margin-top: 10px;
+    text-align: right;
+    margin-top: -1em;
   }
 
   .menu {
@@ -453,4 +465,15 @@ button:hover {
     height: auto;
     margin: 0 auto;
   }
+}
+
+#texto-blitz,
+#blitz {
+  display: none;
+  margin: auto;
+}
+
+#blitz {
+  margin-top: 1rem;
+  border-radius: 100%;
 }
