--- a/css/index.css
+++ b/css/index.css
@@ -62,7 +62,13 @@ hr {
 /* Header */
 
 .logo {
-  display: none;
+  display: flex;
+  font-weight: bold;
+  letter-spacing: 1px;
+  color: #f93f55;
+  text-decoration: none;
+  font-size: 1.5em;
+  margin-top: 1em;
 }
 
 header {
@@ -75,6 +81,8 @@ header {
   cursor: pointer;
   margin-bottom: 10px;
   margin-top: 10px;
+  text-align: right;
+  margin-top: -1em;
 }
 
 .menu {
@@ -286,8 +294,8 @@ footer a {
 
   .about-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     place-items: center;
@@ -304,8 +312,9 @@ footer a {
   }
 
   .description-container {
-    grid-area: 1 / 2 / 2 / 3;
-    text-align: justify;
+    grid-area: 2 / 1 / 3 / 2;
+    text-align: center;
+    max-width: 600px;
   }
 
   /* Offers */
