--- a/css/sobre_nosotros.css
+++ b/css/sobre_nosotros.css
@@ -61,10 +61,6 @@ hr {
 
 /* Header */
 
-.logo {
-  display: none;
-}
-
 header {
   background-color: #eee;
   padding: 10px;
@@ -75,6 +71,18 @@ header {
   cursor: pointer;
   margin-bottom: 10px;
   margin-top: 10px;
+  text-align: right;
+  margin-top: -1em;
+}
+
+.logo {
+  display: flex;
+  font-weight: bold;
+  letter-spacing: 1px;
+  color: #f93f55;
+  text-decoration: none;
+  font-size: 1.5em;
+  margin-top: 1em;
 }
 
 .menu {
